ci: trigger sonar debug on push

--- a/.github/workflows/sonar-debug.yml
+++ b/.github/workflows/sonar-debug.yml
@@ -2,7 +2,8 @@
 name: Sonar Debug
 
 on:
-  workflow_dispatch:
+  push:
+    branches: ["chore/eslint-10-flat-config"]
 
 permissions:
   contents: read
